# project-Atlas

./: .env.example  .gitignore  DEPLOY.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  api.py  benchmarks.py  commissioning.py  compliance.py  config.py  context.py  database.py  demo.py  equipment.py  evaluation.py  executive.py  graph.py  guardrails.py  impact_chain.py  ingestion.py  llm.py  main.py  mitigation.py  models.py  procurement.py  schedule.py  vector.py  workflow.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE.mermaid  BACKUP_SCREENSHOTS.md  DATA_PROVENANCE.md  DEMO_RECORDING_CHECKLIST.md  DEMO_SCRIPT.md  LICENSES.md  LIMITATIONS.md  PRESENTATION_CONTENT.md  ROADMAP.md  SUBMISSION_CHECKLIST.md
evaluation/: __init__.py  latest.json  latest.md  manual_time_study.json  run_all.py
frontend/: components.json  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
migrations/: env.py
reports/: rag_evaluation.json  rag_evaluation.md
scripts/: evaluate_rag.py  evaluate_synthetic.py  reindex.py  seed_demo.py  start_demo.sh  start_production.sh
tests/: test_answer_generation.py  test_commissioning_qa.py  test_compliance.py  test_config.py  test_context.py  test_dashboard_api.py  test_equipment_thread.py  test_evaluate_synthetic.py  test_evidence_impact_chain.py  test_guardrails.py  test_health.py  test_hybrid_retrieval.py  test_impact_chain.py  test_index_migration.py  test_ingestion.py  test_knowledge_workflow.py  test_llm_gateway.py  test_schedule.py  (+10 more)
(+51 files in other folders)
