[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-atlas"
version = "0.1.0"
description = "Project Atlas API"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16",
  "asyncpg>=0.29",
  "fastapi>=0.115",
  "langgraph>=0.2",
  "networkx>=3.4",
  "google-genai>=1.0",
  "Pillow>=10",
  "pydantic-settings>=2.6",
  "pymupdf>=1.24",
  "pytesseract>=0.3.13",
  "python-multipart>=0.0.18",
  "qdrant-client>=1.12",
  "sentence-transformers>=3.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["aiosqlite>=0.20", "httpx>=0.28", "pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
